--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,6 +6,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -27,21 +28,46 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+  line-height: 1;
 }
 
 h1 {
   font-size: 100px;
+  -webkit-text-stroke: 1px hotpink;
 }
 
 .sparkle {
  -webkit-text-fill-color: transparent;
- background: -webkit-linear-gradient(transparent, transparent), url(https://media.giphy.com/media/UYgkFrfCaPJEk/giphy.gif) repeat;
+ background: -webkit-linear-gradient(transparent, transparent), url('../images/glitter.gif') repeat;
  -webkit-background-clip: text;
+}
+
+p {
+  font-size: 34px;
+}
+
+button {
+  font-family: 'SF Hollywood Hills';
+  width: 400px;
+  height: 100px;
+  font-size: 60px;
+  background-color: hotpink;
+  color: white;
+  font-weight: bold;
+  border: 1px solid white;
+  border-radius: 20px;
+  letter-spacing: 4px;
+  margin-top: 33px;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
     text-align: center;
+  }
+
+  button {
+    width: 100%;
   }
 }
