--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -86,6 +86,24 @@ button {
   }
 }
 
+.turn {
+  display: none;
+  z-index: 100;
+  position: fixed;
+  z-index: 100;
+  height: 100vh;
+  background: white;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+@media (orientation: landscape) {
+  .turn {
+    display: flex;
+  }
+}
+
 .bold-brand {
   color: hotpink;
   font-weight: bold;
