feat: graphQL config added and data pushed through

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -98,7 +98,7 @@ button {
   padding: 20px;
 }
 
-@media (orientation: landscape) {
+@media only screen and (max-height: 500px) and (orientation: landscape) {
   .turn {
     display: flex;
   }
