feat: load at the bottom and add loading indicator

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -150,3 +150,24 @@ button {
   justify-content: center;
   align-items: center;
 }
+
+.loading-indicator {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100px;
+  width: 100px;
+  animation: rotation .7s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
