--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -68,6 +68,7 @@ h1 {
   position: fixed;
   z-index: 100;
   height: 100vh;
+  width: 100vw;
   background: white;
   align-items: center;
   justify-content: center;
@@ -88,6 +89,7 @@ h1 {
 .scroll-piece {
   scroll-snap-align: start;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   position: relative;
   scroll-snap-stop: always;
   display: flex;
@@ -270,7 +272,6 @@ h1 {
     flex-grow: 1;
     margin: 20px;
     scroll-snap-type: x mandatory;
-    margin-bottom: 120px;
   }
 
   .choice {
