--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -48,11 +48,15 @@ h1 {
   padding: 20px 0;
 }
 
-.start-button {
+.quiz-size-button-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.main-button {
   font-family: 'SF Hollywood Hills';
-  width: 400px;
-  height: 100px;
-  font-size: 60px;
   background-color: hotpink;
   color: white;
   font-weight: bold;
@@ -60,6 +64,11 @@ h1 {
   border-radius: 20px;
   letter-spacing: 4px;
   cursor: pointer;
+  line-height: 50px;
+  font-size: 30px;
+  margin-top: 10px;
+  width: 400px;
+  flex-basis: 48%;
 }
 
 .turn {
@@ -108,11 +117,11 @@ h1 {
   cursor: pointer;
 }
 
-.up {
+.navigate-arrow.up {
   top: 30px;
 }
 
-.down {
+.navigate-arrow.down {
   bottom: 30px;
   transform: scale(1, -1);
 }
@@ -227,14 +236,11 @@ h1 {
   body {
     overflow-y: scroll;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
   }
 
   h1 {
     font-size: 100px;
-  }
-
-  .start-button {
-    width: 100%;
   }
 
   .scroll-piece:not(.quiz) {
@@ -242,8 +248,21 @@ h1 {
     align-items: center;
   }
 
-  .navigate-arrow {
+  .navigate-arrow:not(.start) {
     display: none;
+  }
+
+  .navigate-arrow.start {
+    animation-name: bounce;
+    animation-timing-function: linear;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+  }
+
+  @keyframes bounce {
+    0%   { bottom: 30px; }
+    50%  { bottom: 10px; }
+    100% { bottom: 30px; }
   }
 
   .quiz-content {
@@ -341,7 +360,7 @@ h1 {
   }
 
   .share-container {
-    top: 30px;
-    left: 30px;
+    top: 40px;
+    left: 40px;
   }
 }
