--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -173,7 +173,6 @@ h1 {
 .grade {
   position: absolute;
   font-size: 42px;
-  z-index: -1;
 }
 
 @keyframes fade {
@@ -198,11 +197,14 @@ h1 {
 }
 
 .choice.clicked.correct {
-  background-color: rgb(0, 255, 0, 0.2);
+  /* background-color: rgb(0, 255, 0, 0.2); */
+  background-color: hotpink;
+  color: white;
 }
 
 .choice.clicked.incorrect {
-  background-color: rgb(255, 0, 0, 0.2);
+  /* background-color: rgb(255, 0, 0, 0.2); */
+  background-color: rgb(255, 105, 180, 0.2);
 }
 
 .choice:disabled {
